Updating files for 9/3

--- a/lec/lec01.ipynb
+++ b/lec/lec01.ipynb
@@ -2,58 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: datascience in /usr/local/lib/python3.7/site-packages (0.10.5)\n",
-      "Requirement already satisfied: pytest in /usr/local/lib/python3.7/site-packages (from datascience) (3.7.3)\n",
-      "Requirement already satisfied: sphinx in /usr/local/lib/python3.7/site-packages (from datascience) (1.7.8)\n",
-      "Requirement already satisfied: coverage==3.7.1 in /usr/local/lib/python3.7/site-packages (from datascience) (3.7.1)\n",
-      "Requirement already satisfied: folium==0.2.1 in /usr/local/lib/python3.7/site-packages (from datascience) (0.2.1)\n",
-      "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/site-packages (from datascience) (39.2.0)\n",
-      "Requirement already satisfied: coveralls==0.5 in /usr/local/lib/python3.7/site-packages (from datascience) (0.5)\n",
-      "Requirement already satisfied: more-itertools>=4.0.0 in /usr/local/lib/python3.7/site-packages (from pytest->datascience) (4.3.0)\n",
-      "Requirement already satisfied: pluggy>=0.7 in /usr/local/lib/python3.7/site-packages (from pytest->datascience) (0.7.1)\n",
-      "Requirement already satisfied: atomicwrites>=1.0 in /usr/local/lib/python3.7/site-packages (from pytest->datascience) (1.2.0)\n",
-      "Requirement already satisfied: py>=1.5.0 in /usr/local/lib/python3.7/site-packages (from pytest->datascience) (1.6.0)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in /usr/local/lib/python3.7/site-packages (from pytest->datascience) (18.1.0)\n",
-      "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/site-packages (from pytest->datascience) (1.11.0)\n",
-      "Requirement already satisfied: Pygments>=2.0 in /usr/local/lib/python3.7/site-packages (from sphinx->datascience) (2.2.0)\n",
-      "Requirement already satisfied: snowballstemmer>=1.1 in /usr/local/lib/python3.7/site-packages (from sphinx->datascience) (1.2.1)\n",
-      "Requirement already satisfied: docutils>=0.11 in /usr/local/lib/python3.7/site-packages (from sphinx->datascience) (0.14)\n",
-      "Requirement already satisfied: requests>=2.0.0 in /usr/local/lib/python3.7/site-packages (from sphinx->datascience) (2.12.4)\n",
-      "Requirement already satisfied: sphinxcontrib-websupport in /usr/local/lib/python3.7/site-packages (from sphinx->datascience) (1.1.0)\n",
-      "Requirement already satisfied: alabaster<0.8,>=0.7 in /usr/local/lib/python3.7/site-packages (from sphinx->datascience) (0.7.11)\n",
-      "Requirement already satisfied: imagesize in /usr/local/lib/python3.7/site-packages (from sphinx->datascience) (1.0.0)\n",
-      "Requirement already satisfied: Jinja2>=2.3 in /usr/local/lib/python3.7/site-packages (from sphinx->datascience) (2.10)\n",
-      "Requirement already satisfied: babel!=2.0,>=1.3 in /usr/local/lib/python3.7/site-packages (from sphinx->datascience) (2.6.0)\n",
-      "Requirement already satisfied: packaging in /usr/local/lib/python3.7/site-packages (from sphinx->datascience) (17.1)\n",
-      "Requirement already satisfied: PyYAML>=3.10 in /usr/local/lib/python3.7/site-packages (from coveralls==0.5->datascience) (3.13)\n",
-      "Requirement already satisfied: docopt>=0.6.1 in /usr/local/lib/python3.7/site-packages (from coveralls==0.5->datascience) (0.6.2)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.7/site-packages (from Jinja2>=2.3->sphinx->datascience) (1.0)\n",
-      "Requirement already satisfied: pytz>=0a in /usr/local/lib/python3.7/site-packages (from babel!=2.0,>=1.3->sphinx->datascience) (2018.5)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.7/site-packages (from packaging->sphinx->datascience) (2.2.0)\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'datascience'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-97ffbe386680>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# HIDDEN\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pip3 install datascience'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdatascience\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'matplotlib'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'datascience'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# HIDDEN\n",
-    "!pip3 install datascience\n",
+    "# Setup code\n",
     "from datascience import *\n",
     "import numpy as np\n",
     "%matplotlib inline\n",
