--- a/lec/lec01.ipynb
+++ b/lec/lec01.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setup code\n",
+    "# HIDDEN\n",
     "from datascience import *\n",
     "import numpy as np\n",
     "%matplotlib inline\n",
