--- a/hw/hw02/hw02.ipynb
+++ b/hw/hw02/hw02.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "In the next cell, we've loaded arrays containing the 1000 trait values for Stanford and Berkeley.  Compute the dissimilarity (according to the above method) between Stanford and Berkeley.  Call your answer `dissimilarity`.  Use a single line of code to compute the answer.\n",
     "\n",
-    "*Note:* The data we're using aren't real -- we made them up for this exercise, except for the cost-of-attendance numbers, which we estimated for a student from a median-income family living in California using [this tool](http://college-tuition.startclass.com)."
+    "*Note:* The Data 8 team made up this data for this exercise, except for the cost-of-attendance numbers, which they estimated for a student from a median-income family living in California using [this tool](http://college-tuition.startclass.com)."
    ]
   },
   {
@@ -390,9 +390,9 @@
    "source": [
     "# Don't change this cell; just run it.\n",
     "# From http://www2.census.gov/programs-surveys/popest/datasets/2010-2017/national/totals/nst-est2017-alldata.csv\n",
-    "# Select state-level data."
+    "# Select state-level data.\n",
     "pop = Table.read_table('nst-est2017-alldata.csv').where('SUMLEV', 40)\n",
-    "# Select relevant columns."
+    "# Select relevant columns.\n",
     "pop = pop.select('REGION','NAME', 'POPESTIMATE2016','POPESTIMATE2017','BIRTHS2017', 'DEATHS2017', 'NETMIG2017', 'RESIDUAL2017')\n",
     "pop = pop.relabeled(2, '2016').relabeled(3, '2017')\n",
     "pop = pop.relabeled(4, 'BIRTHS').relabeled(5, 'DEATHS')\n",
