Fix syntax error

--- a/lab/lab03/lab03.ipynb
+++ b/lab/lab03/lab03.ipynb
@@ -666,7 +666,7 @@
    "metadata": {},
    "source": [
     "## 4. Graphing Car Data\n",
-    "In this problem, you need to choose the appropriate visualization for data on the city-cycle fuel consuption in miles per gallon for selected cars from 1970-1982.\n",
+    "In this problem, you need to choose the appropriate visualization for data on the city-cycle fuel consuption in miles per gallon for selected cars from 1970-1982.\n"
    ]
   },
   {
