--- a/lab/lab03/lab03.ipynb
+++ b/lab/lab03/lab03.ipynb
@@ -57,7 +57,7 @@
     "|`num_columns`|`tbl.num_columns`|Compute the number of columns in a table|\n",
     "|`select`|`tbl.select(\"N\")`|Create a copy of a table with only some of the columns|\n",
     "|`drop`|`tbl.drop(\"2*N\")`|Create a copy of a table without some of the columns|\n",
-    "|`take`|`tbl.take(np.arange(0, 6, 2))`|Create a copy of the table with only the rows whose indices are in the given array|\n",
+    "|`take`|`tbl.take(np.arange(0, 6, 2))`|Create a copy of the table with only the rows whose indices are in the given array|\n\n",
     "Note that you can always review the [datascience library documentation](http://data8.org/datascience/) to see what the options are for using the methods described here and in the book. "
    ]
   },
