Fix syntax error

--- a/lab/lab03/lab03.ipynb
+++ b/lab/lab03/lab03.ipynb
@@ -1041,6 +1041,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 7. Summary\n",
     "You're finished with lab 3!  Be sure to...\n",
     "- **run all the tests** (the next cell has a shortcut for that), \n",
     "- **Save and Checkpoint** from the `File` menu,\n",
