--- a/lab/lab03/lab03.ipynb
+++ b/lab/lab03/lab03.ipynb
@@ -30,6 +30,9 @@
     "import warnings\n",
     "warnings.simplefilter('ignore', FutureWarning)\n",
     "\n",
+    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
+    "import ipywidgets as widgets\n",
+    "\n",
     "# These lines load the tests.\n",
     "\n",
     "from client.api.notebook import Notebook\n",
