--- a/lab/lab04/lab04.ipynb
+++ b/lab/lab04/lab04.ipynb
@@ -1171,8 +1171,7 @@
     "def compare_salaries(first, second, first_title, second_title):\n",
     "    \"\"\"Compare the salaries in two tables.\"\"\"\n",
     "    max_salary = max(np.append(first.column('Salary'), second.column('Salary')))\n",
-    "  
-  bins = np.arange(0, max_salary+1e6+1, 1e6)\n",
+    "    bins = np.arange(0, max_salary+1e6+1, 1e6)\n",
     "    first_binned = first.bin('Salary', bins=bins).relabeled(1, first_title)\n",
     "    second_binned = second.bin('Salary', bins=bins).relabeled(1, second_title)\n",
     "    first_binned.join('bin', second_binned).hist(bin_column='bin')\n",
