--- a/lec/test1.ipynb
+++ b/lec/test1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 1.1 False\n",
+    "# 1.2 True\n",
+    "# 1.3 False"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,47 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>First</th> <th>Second</th> <th>Third</th> <th>Fourth</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>a    </td> <td>0     </td> <td>a    </td> <td>a     </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>b    </td> <td>6     </td> <td>b    </td> <td>d     </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>c    </td> <td>4     </td> <td>c    </td> <td>c     </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>d    </td> <td>4     </td> <td>d    </td> <td>c     </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "First | Second | Third | Fourth\n",
-       "a     | 0      | a     | a\n",
-       "b     | 6      | b     | d\n",
-       "c     | 4      | c     | c\n",
-       "d     | 4      | d     | c"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = make_array(0, 3, 2, 2)\n",
     "b = make_array(2, 2, 2, 2)\n",
@@ -90,12 +56,12 @@
     "t = Table().with_columns(\n",
     "  \"First\", c,\n",
     "  \"Second\", a*b,\n",
-    "  \"Third\", c,\n",
+    "  \"Third\", c*b,\n",
     "  \"Fourth\", make_array(c.item(a.item(0)), c.item(a.item(1)),\n",
     "                      c.item(a.item(2)), c.item(a.item(3)))\n",
     "   \n",
     ") \n",
-    "t"
+    "#  note that for Third we allow both an error or assuming you can do c*b"
    ]
   },
   {
@@ -107,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,20 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12.94427190999916"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pyrsurface(2,2)"
    ]
@@ -153,20 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Singin' in the Rain\""
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "imdb = Table.read_table('imdb.csv')\n",
     "# 4.1\n",
@@ -178,7 +122,7 @@
     "# 4.3\n",
     "ave_rating = imdb.column('Rating').mean()\n",
     "imdb = imdb.with_column('Diff', abs(imdb.column('Rating')-ave_rating))\n",
-    "imdb.sort('Diff').column('Title').item(0)"
+    "med_movie = imdb.sort('Diff').column('Title').item(0)"
    ]
   },
   {
@@ -190,28 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
-      "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., ..., 0., 0., 0.])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "boston = Table.read_table(\"boston.csv\")\n",
     "manila = Table.read_table('manila.csv')\n",
@@ -231,8 +156,8 @@
     "  \"\"\"\n",
     "  return 0\n",
     "\n",
-    "bs = boston.apply(dist, 'sourceid', 'dstid')/boston.column('ride time')\n",
-    "ms = manila.apply(dist, 'sourceid', 'dstid')/manila.column('ride time')"
+    "bs = np.mean(boston.apply(dist, 'sourceid', 'dstid')/boston.column('ride time'))\n",
+    "ms = np.mean(manila.apply(dist, 'sourceid', 'dstid')/manila.column('ride time'))"
    ]
   },
   {
@@ -244,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,20 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12000000.0"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "salary('Al Horford')"
    ]
