--- a/lab/lab06/lab06.ipynb
+++ b/lab/lab06/lab06.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Reading**: Textbook chapters [9](https://dukecs.github.io/textbook/chapters/09/randomness.html) and [10](https://dukecs.github.io/textbook/chapters/10/sampling-and-empirical-distributions.html), and [11](https://dukecs.github.io/textbook/chapters/11/testing-hypotheses.html).\n",
+    "**Reading**: Textbook chapters [9](https://dukecs.github.io/textbook/chapters/09/randomness.html) and [10](https://dukecs.github.io/textbook/chapters/10/sampling-and-empirical-distributions.html).\n",
     "First, set up the tests and imports by running the cell below."
    ]
   },
@@ -544,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Basketball team managers would like to hire players who perform well but don't command high salaries.  From this perspective, a very crude measure of a player's *value* to their team is the number of points the player scored in a season for every **\\$1000 of salary** (*Note*: the `Salary` column is in dollars, not thousands of dollars). For example, Al Horford scored 1156 points and has a salary of \\$12 million. This is equivalent to 12,000 thousands of dollars, so his value is $\\frac{1156}{12000}$.\n",
+    "Basketball team managers would like to hire players who perform well but don't command high salaries.  From this perspective, a very crude measure of a player's *value* to their team is the number of points the player scored in a season for every **\\$1000 of salary** (*Note*: the `Salary` column is in dollars, not thousands of dollars). For example, Al Horford scored 1156 points and has a salary of 12 million dollars. This is equivalent to 12,000 thousands of dollars, so his value is $\\frac{1156}{12000}$.\n",
     "\n",
     "**Question 2.** Create a table called `full_data_with_value` that's a copy of `full_data`, with an extra column called `\"Value\"` containing each player's value (according to our crude measure).  Then make a histogram of players' values.  **Specify bins that make the histogram informative, and don't forget your units!**\n",
     "\n",
