--- a/lab/lab07/lab07.ipynb
+++ b/lab/lab07/lab07.ipynb
@@ -94,7 +94,7 @@
    "metadata": {},
    "source": [
     "**Question 2**: Section [11.3](https://dukecs.github.io/textbook/chapters/11/3/Decisions_and_Uncertainty) describes how to develop a null hypothesis and an alternative hypothesis for a particular model.\n",
-What are the null and alternative hypotheses for Emily's experiment? Discuss with your team to come to a conclusion. "
+    "What are the null and alternative hypotheses for Emily's experiment? Discuss with your team to come to a conclusion. "
    ]
   },
   {
