--- a/lec/lec12.ipynb
+++ b/lec/lec12.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lecture 12 ##"
+    "## Lecture 12 (updated) ##"
    ]
   },
   {
