--- a/test2/test2.ipynb
+++ b/test2/test2.ipynb
@@ -29,7 +29,8 @@
     "### Getting help\n",
     "\n",
     "You are not allowed to post any public questions to Piazza about the material on this test. Any questions about the exam must be asked by email or via a *private* post on Piazza. \n",
-    "Violations of the policy above will be reported to the Undergraduate Conduct Board. If you are found responsible, you will receive a 0 grade for this test and it may result in additional penalties for the final course grade.\n"
+    "### Policy\n",
+    "Violations of the test policy will be reported to the Undergraduate Conduct Board. If you are found responsible, you will receive a 0 grade for this test and it may result in additional penalties for the final course grade.\n"
    ]
   },
   {
