--- a/test2/test2.ipynb
+++ b/test2/test2.ipynb
@@ -58,7 +58,8 @@
     "\n",
     "# These lines load the ability to submit.\n",
     "from client.api.notebook import Notebook\n",
-    "ok = Notebook('test2.ok')"
+    "ok = Notebook('test2.ok')",
+    "_ = ok.auth(inline=True)"
    ]
   },
   {
