--- a/test2/test2.ipynb
+++ b/test2/test2.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "# These lines load the ability to submit.\n",
     "from client.api.notebook import Notebook\n",
-    "ok = Notebook('test2.ok')",
+    "ok = Notebook('test2.ok')\n",
     "_ = ok.auth(inline=True)"
    ]
   },
@@ -309,7 +309,7 @@
     }
    ],
    "source": [
-    "restaurant_sample = pop_restaurants.sample(100, with_replacement=False\n",
+    "restaurant_sample = pop_restaurants.sample(100, with_replacement=False)\n",
     "restaurant_sample.hist('Score')"
    ]
   },
