--- a/test2/test2.ipynb
+++ b/test2/test2.ipynb
@@ -54,7 +54,7 @@
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('fivethirtyeight')\n",
     "import warnings\n",
-    "warnings.simplefilter('ignore', FutureWarning)\n",
+    "warnings.simplefilter('ignore')\n",
     "\n",
     "# These lines load the ability to submit.\n",
     "from client.api.notebook import Notebook\n",
